--- a/contact.html
+++ b/contact.html
@@ -1,119 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- in the head is metadata used by the browser -->
+<!-- Contact page for Tiptoe Shoes -->
 
 <head>
-    <title>Contact Page</title>
+    <title>Contact Us | Tiptoe Shoes</title>
+
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="responsive.css">
     <link rel="icon" href="images/home-solid.png">
+
     <meta charset="UTF-8">
-    <meta name="keywords" content="html,css">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <!-- icons -->
-    <!-- <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0&icon_names=person" > -->
+    <meta name="keywords" content="Tiptoe Shoes, contact, customer support">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Icons -->
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0&icon_names=favorite,person,shopping_basket" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <script src="script.js"></script>
 </head>
 
 <body>
+
+    <!-- HEADER -->
     <header class="page-header">
-        <button class="nav-button">
-            <img src="images/menu_48dp_E3E3E3_FILL0_wght400_GRAD0_opsz48.svg">
+
+        <button class="nav-button" aria-label="Open navigation menu">
+            <img src="images/menu_48dp_E3E3E3_FILL0_wght400_GRAD0_opsz48.svg" alt="Menu icon">
         </button>
+
         <a href="index.html">
-            <img class="logo" src="images/TipToe Soles_Logo_colour.png">
+            <img class="logo" src="images/TipToe Soles_Logo_colour.png" alt="Tiptoe Shoes logo">
         </a>
+
         <nav class="navigation" id="categories">
             <a href="men.html">Men</a>
             <a href="women.html">Women</a>
             <a href="accessories.html">Accessories</a>
             <a href="services.html">Services</a>
         </nav>
+
         <form id="search">
-            <input type="search" placeholder="search for a product" id="keywords" name="keywords">
+            <input type="search" placeholder="Search for a product" id="keywords" name="keywords">
             <button type="submit">Search</button>
         </form>
+
         <nav class="navigation" id="user">
-            <a href="account.html">
-                <!-- Account -->
-                <span class="material-symbols-outlined">
-                    person
-                </span>
+            <a href="account.html" aria-label="Account">
+                <span class="material-symbols-outlined">person</span>
             </a>
-            <a href="wishlist.html">
-                <!-- Wishlist -->
-                <span class="material-symbols-outlined">
-                    favorite
-                </span>
+            <a href="wishlist.html" aria-label="Wishlist">
+                <span class="material-symbols-outlined">favorite</span>
             </a>
-            <a href="cart.html">
-                <!-- Car1   q```    t -->
-                <span class="material-symbols-outlined">
-                    shopping_basket
-                </span>
+            <a href="cart.html" aria-label="Shopping cart">
+                <span class="material-symbols-outlined">shopping_basket</span>
             </a>
         </nav>
+
     </header>
+
+    <!-- Banner -->
     <div class="contact-banner"></div>
-    <!-- content -->
+
+    <!-- MAIN CONTENT -->
     <main class="content">
+
+        <!-- Accessibility heading -->
+        <h2 class="visually-hidden">Contact Tiptoe Shoes</h2>
+
+        <nav class="breadcrumbs">
+            <a href="index.html">Home</a>
+            <span class="separator">/</span>
+            <span class="active">Contact Us</span>
+        </nav>
+
         <div class="card-container">
+
+            <!-- Address -->
             <div class="card">
                 <div class="card-content">
-                    <h3>Our Address</h3>
+                    <h3>Head Office</h3>
                     <address>
-                        322 Avondale Road
-                        Enfield NSW 2133
+                        Tiptoe Shoes<br>
+                        322 Avondale Road<br>
+                        Enfield NSW 2133<br>
+                        Australia
                     </address>
                 </div>
             </div>
+
+            <!-- Customer Support -->
             <div class="card">
                 <div class="card-content">
-                    <h3>Customer Service</h3>
-                    <p>Telephone: 02 9210 5000
-                    Email us at: TipToeShoes@gmail.com
+                    <h3>Customer Support</h3>
+                    <p>
+                        Phone: <a href="tel:0292105000">02 9210 5000</a><br>
+                        Email: <a href="mailto:support@tiptoeshoes.com.au">support@tiptoeshoes.com.au</a>
+                    </p>
+                    <p>
+                        Our support team is available Monday to Friday, 9:00am – 5:00pm (AEST).
                     </p>
                 </div>
             </div>
+
+            <!-- Map -->
             <div class="card">
-                <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6629.297168906964!2d151.18494191145473!3d-33.82138071649301!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b12af1fe3b9b887%3A0x6fda02f3cc79cba1!2sTAFE%20NSW%20-%20St%20Leonards!5e0!3m2!1sen!2sau!4v1762767352690!5m2!1sen!2sau" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    id="map"
+                    title="Map showing Tiptoe Shoes head office location"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6629.297168906964!2d151.18494191145473!3d-33.82138071649301!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b12af1fe3b9b887%3A0x6fda02f3cc79cba1!2sTAFE%20NSW%20-%20St%20Leonards!5e0!3m2!1sen!2sau!4v1762767352690!5m2!1sen!2sau"
+                    style="border:0;"
+                    allowfullscreen
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
             </div>
+
+            <!-- Contact Form -->
             <div class="card">
                 <form id="contact" action="https://example.com/form" method="post">
-                    <label for="sendername">You Name</label>
-                    <input id="sendername" name="sendername" type="text" placeholder="Jane Smith">
+
+                    <label for="sendername">Full Name</label>
+                    <input
+                        id="sendername"
+                        name="sendername"
+                        type="text"
+                        placeholder="Alex Taylor"
+                        required>
+
                     <label for="email">Email Address</label>
-                    <input id="email" type="email" name="email" placeholder="jane@example.com">
+                    <input
+                        id="email"
+                        type="email"
+                        name="email"
+                        placeholder="alex@example.com"
+                        required>
+
                     <label for="message">Message</label>
-                    <textarea id="message" name="message" cols="30" rows="5" placeholder="Hey there"></textarea>
+                    <textarea
+                        id="message"
+                        name="message"
+                        cols="30"
+                        rows="5"
+                        placeholder="Write your message here..."
+                        required></textarea>
+
                     <div class="buttons">
-                        <button type="reset">Cancel</button>
+                        <button type="reset">Clear</button>
                         <button type="submit">Send Message</button>
                     </div>
+
                 </form>
             </div>
+
         </div>
     </main>
+
+    <!-- FOOTER -->
     <footer class="footer">
+
         <nav class="footer-menu">
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
             <a href="policies.html">Policies</a>
         </nav>
+
         <nav class="social">
             <a href="https://facebook.com">Facebook</a>
             <a href="https://instagram.com">Instagram</a>
             <a href="https://tiktok.com">TikTok</a>
             <a href="https://linkedin.com">LinkedIn</a>
         </nav>
+
         <nav class="legal">
             <a href="copyright.html">Copyright</a>
             <a href="terms.html">Terms and Conditions</a>
         </nav>
-    </footer>
-</body>
 
+    </footer>
+
+</body>
 </html>
