--- a/index.html
+++ b/index.html
@@ -1,40 +1,31 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
-<!-- Home page for Tiptoe Shoes website -->
 
 <head>
-    <title>Tiptoe Shoes | Home</title>
-
+    <title>Home Page</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="responsive.css">
     <link rel="icon" href="images/home-solid.png">
-
     <meta charset="UTF-8">
-    <meta name="keywords" content="shoes, footwear, tiptoe shoes">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="html,css">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 
-    <!-- Icons -->
+    <!-- Google Material Icons -->
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0&icon_names=favorite,person,shopping_basket" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <script src="script.js"></script>
 </head>
 
 <body>
 
-    <!-- HEADER -->
     <header class="page-header">
-
-        <button class="nav-button" aria-label="Open menu">
+        <button class="nav-button">
             <img src="images/menu_48dp_E3E3E3_FILL0_wght400_GRAD0_opsz48.svg" alt="Menu">
         </button>
 
         <a href="index.html">
-            <img class="logo" src="images/TipToe Soles_Logo_colour.png" alt="Tiptoe Shoes logo">
+            <img class="logo" src="images/TipToe Soles_Logo_colour.png" alt="Logo">
         </a>
 
         <nav class="navigation" id="categories">
@@ -45,98 +36,66 @@
         </nav>
 
         <form id="search">
-            <input
-                type="search"
-                id="keywords"
-                name="keywords"
-                placeholder="Search products">
-            <button type="submit">Go</button>
+            <input type="search" placeholder="search for a product" id="keywords" name="keywords">
+            <button type="submit">Search</button>
         </form>
 
         <nav class="navigation" id="user">
-            <a href="account.html" aria-label="Account">
+            <a href="account.html">
                 <span class="material-symbols-outlined">person</span>
             </a>
-            <a href="wishlist.html" aria-label="Wishlist">
+            <a href="wishlist.html">
                 <span class="material-symbols-outlined">favorite</span>
             </a>
-            <a href="cart.html" aria-label="Shopping cart">
+            <a href="cart.html">
                 <span class="material-symbols-outlined">shopping_basket</span>
             </a>
         </nav>
-
     </header>
 
-    <!-- HERO BANNER -->
-    <section class="banner">
-        <h2>Seasonal Deals Are Here</h2>
-        <button>Explore Offers</button>
-    </section>
+    <!-- Banner -->
+    <div class="banner">
+        <h2>Black Friday Sale!</h2>
+        <button>Shop Black Friday</button>
+    </div>
 
-    <!-- MAIN CONTENT -->
+    <!-- Main Content -->
     <main class="content">
 
         <div class="card-container">
 
-            <!-- Men's category -->
             <div class="card">
-                <img src="images/categories/mens.jpg" alt="Men's shoes">
+                <img src="images/mens.jpg" alt="Mens shoes">
                 <div class="card-content">
-                    <h3>Men’s Collection</h3>
-                    <button>View Men</button>
+                    <h3>Mens</h3>
+                    <button>Shop mens</button>
                 </div>
             </div>
 
-            <!-- Women's category -->
             <div class="card">
-                <img src="images/categories/womens.jpg" alt="Women's shoes">
+                <img src="images/Women shoes1.jpg" alt="Womens shoes">
                 <div class="card-content">
-                    <h3>Women’s Collection</h3>
-                    <button>View Women</button>
+                    <h3>Womens</h3>
+                    <button>Shop womens</button>
                 </div>
             </div>
 
-            <!-- Accessories category -->
             <div class="card">
-                <img src="images/categories/accessories.jpg" alt="Shoe accessories">
+                <img src="images/accessories.jpg" alt="Accessories">
                 <div class="card-content">
                     <h3>Accessories</h3>
-                    <button>Browse Accessories</button>
+                    <button>Shop accessories</button>
                 </div>
             </div>
 
         </div>
 
-        <!-- SECOND PROMO BANNER -->
-        <section class="banner2">
-            <h2>Holiday Footwear Essentials</h2>
-            <button>Shop Holiday Range</button>
-        </section>
+        <div class="banner2">
+            <h2>Holiday Sale</h2>
+            <button><h2>Shop Holiday Sale</h2></button>
+        </div>
 
     </main>
 
-    <!-- FOOTER -->
     <footer class="footer">
-
         <nav class="footer-menu">
-            <a href="about.html">About Us</a>
-            <a href="contact.html">Contact</a>
-            <a href="policies.html">Policies</a>
-        </nav>
-
-        <nav class="social">
-            <a href="https://facebook.com">Facebook</a>
-            <a href="https://instagram.com">Instagram</a>
-            <a href="https://tiktok.com">TikTok</a>
-            <a href="https://linkedin.com">LinkedIn</a>
-        </nav>
-
-        <nav class="legal">
-            <a href="copyright.html">Copyright</a>
-            <a href="terms.html">Terms & Conditions</a>
-        </nav>
-
-    </footer>
-
-</body>
-</html>
