--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <title>Home Page</title>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="keywords" content="html,css">
+
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="responsive.css">
     <link rel="icon" href="images/home-solid.png">
-    <meta charset="UTF-8">
-    <meta name="keywords" content="html,css">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
 
     <!-- Google Material Icons -->
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0&icon_names=favorite,person,shopping_basket" />
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -92,10 +94,18 @@
 
         <div class="banner2">
             <h2>Holiday Sale</h2>
-            <button><h2>Shop Holiday Sale</h2></button>
+            <button>
+                <h2>Shop Holiday Sale</h2>
+            </button>
         </div>
 
     </main>
 
     <footer class="footer">
         <nav class="footer-menu">
+            <!-- footer links go here -->
+        </nav>
+    </footer>
+
+</body>
+</html>
